<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <checkvn.com.viettiepbhdt.utils.custom.CustomToolbarView
        android:id="@+id/topBar"
        style="@style/PersonalToolbar"
        app:ctv_title="@string/password" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/regularPadding">

            <EditText
                android:id="@+id/edtCurrentPassword"
                style="@style/BoxEditText"
                android:layout_marginTop="@dimen/regularMargin"
                android:hint="@string/current_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvCurrentPasswordMessage"
                style="@style/TextMessage"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/wrong_password"
                android:visibility="gone" />


            <EditText
                android:id="@+id/edtNewPassword"
                style="@style/BoxEditText"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                style="@style/BoxEditText"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvNewPasswordMessage"
                style="@style/TextMessage"
                android:layout_marginTop="@dimen/smallMargin"
                android:text="@string/password_is_not_match"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnChangePassword"
                style="@style/CommonButton"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="@dimen/bigMargin"
                android:text="@string/change_password" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
