<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extraMargin"
        android:layout_marginEnd="@dimen/extraMargin"
        android:orientation="vertical">

        <include layout="@layout/header_authentication" />

        <RelativeLayout
            android:layout_marginTop="@dimen/view_size_50dp"
            android:id="@+id/layoutUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo">

            <EditText
                android:id="@+id/edtPhoneNumber"
                style="@style/CommonEditText"
                android:layout_marginHorizontal="@dimen/regularMargin"
                android:textColorHint="@color/ABB6BC"
                android:hint="@string/enter_phone_number"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tvMsgPhoneNumber"
                style="@style/TextMessage"
                android:layout_below="@id/edtPhoneNumber"
                android:layout_alignStart="@id/edtPhoneNumber"
                android:layout_marginStart="@dimen/extraSmallMargin"
                android:text="@string/invalid_phone_number" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/CommonEditText.Password"
                android:layout_below="@id/edtPhoneNumber"
                android:textColorHint="@color/ABB6BC"
                android:layout_marginTop="@dimen/regularMargin"
                android:hint="@string/enter_password" />

            <TextView
                android:id="@+id/tvMsgPassword"
                style="@style/TextMessage"
                android:layout_below="@id/edtPassword"
                android:layout_alignStart="@id/edtPassword"
                android:layout_marginStart="@dimen/extraSmallMargin"
                android:text="@string/invalid_password" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtPassword"
                android:layout_alignEnd="@id/edtPassword"
                android:layout_marginEnd="@dimen/extraSmallMargin"
                android:text="@string/forgot_password"
                android:textSize="13sp"
                android:textColor="@color/colorRed" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/CommonButton"
            android:layout_marginTop="@dimen/view_size_50dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutUserInput" />

        <LinearLayout
            android:id="@+id/btnRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeightRegular"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/regularMargin"
            android:layout_marginTop="@dimen/regularMargin"
            android:background="@drawable/bg_outline_radius_5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <include layout="@layout/bottom_social_authentication" />

    </LinearLayout>

</ScrollView>

