<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/extraMargin"
            android:layout_marginEnd="@dimen/extraMargin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/header_authentication" />

            <LinearLayout
                android:id="@+id/layoutUserInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo">

                <EditText
                    android:id="@+id/edtOldPassword"
                    style="@style/CommonEditText"
                    android:layout_marginTop="@dimen/imgMargin"
                    android:hint="@string/enter_old_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvOldPassword"
                    style="@style/TextMessage"
                    android:layout_marginStart="@dimen/extraSmallMargin"
                    android:text="@string/invalid_phone_number" />

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/CommonEditText"
                    android:layout_marginTop="@dimen/extraMargin"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvMsgPhoneNumber"
                    style="@style/TextMessage"
                    android:layout_marginStart="@dimen/extraSmallMargin"
                    android:text="@string/invalid_phone_number" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/CommonEditText"
                    android:layout_marginTop="@dimen/extraMargin"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvMsgPassword"
                    style="@style/TextMessage"
                    android:layout_weight="1"
                    android:text="@string/password_is_not_match" />

            </LinearLayout>

            <Button
                android:id="@+id/btnChangePassword"
                style="@style/CommonButton"
                android:layout_marginTop="@dimen/imgMargin"
                android:text="@string/change_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutUserInput" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

